--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,11 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -21,12 +23,14 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  font-family: 'Unbounded', system-ui, sans-serif;
 }
 a:hover {
   color: #535bf2;
 }
 
 body {
+  font-family: 'Unbounded', system-ui, sans-serif;
   margin: 0;
   display: flex;
   place-items: center;
@@ -37,6 +41,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'Unbounded', system-ui, sans-serif;
 }
 
 button {
@@ -49,6 +54,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  font-family: 'Unbounded', system-ui, sans-serif;
 }
 button:hover {
   border-color: #646cff;
@@ -62,11 +68,14 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    font-family: 'Unbounded', system-ui, sans-serif;
   }
   a:hover {
     color: #747bff;
+    font-family: 'Unbounded', system-ui, sans-serif;
   }
   button {
     background-color: #f9f9f9;
+    font-family: 'Unbounded', system-ui, sans-serif;
   }
 }
